--- a/specs/pitch/adrs/111825eslint.md
+++ b/specs/pitch/adrs/111825eslint.md
@@ -1,26 +1,33 @@
-# ADR: Use ESLint for Linting
+# **ADR: Use ESLint for Linting**
 
-## Context
+## **Context**
 
-Our Conductor App uses JavaScript, and multiple team members will be contributing code. We need a simple, consistent way to catch mistakes and keep the code style uniform.
+Our Conductor App is built primarily with JavaScript, and multiple team members are contributing code across the backend and frontend.
+To maintain consistency, catch common mistakes early, and reduce review overhead, we need a standardized linting tool that enforces code quality and style across the entire project.
 
-## Decision
+---
 
-- We will use **ESLint** as our linter.
+## **Decision**
 
-- Team Members Involved: Andrew Pan, Boqi Zhu
+We will adopt **ESLint** as the primary JavaScript linter for both the backend and frontend.
 
-- Date: 11/18/2025
+* **Team Members Involved:** Andrew Pan, Boqi Zhu
+* **Date:** 11/18/2025
 
-## Why ESLint?
+---
 
-* Widely used and well-supported in the JavaScript ecosystem
-* Easy to configure for our needs
-* Works with VSCode, npm, and CI/CD Pipeline
-* Has many useful plugins
-* Helps keep code consistent across the whole team
+## **Why ESLint?**
 
-## Alternatives
+* Highly popular and well-supported in the JavaScript ecosystem
+* Flexible rule configuration suitable for both backend (Node.js) and browser environments
+* Integrates seamlessly with VSCode, npm scripts, and GitHub Actions CI
+* Supports plugins and presets for many frameworks and coding styles
+* Automatically detects common issues such as unused variables, undefined identifiers, and potential runtime bugs
+* Helps maintain consistent style across all contributors
 
-* **JSHint/JSLint**: older and less flexible
-* **Prettier alone**: formatting only, not real linting
+---
+
+## **Alternatives**
+
+* **JSHint / JSLint** – older tools with fewer customization options and weaker community support
+* **Prettier alone** – handles formatting only; does not detect logical errors, unused variables, or code smells
